@@ -25,11 +25,19 @@ JAVA_OPTS="$JAVA_OPTS -Dcom.sun.management.jmxremote.ssl=false"
 ```
 
 
+
 # GC分析案例：
 > [CMS分析](https://plumbr.io/handbook/garbage-collection-algorithms-implementations/concurrent-mark-and-sweep)
+> [GC 调优](https://blog.csdn.net/renfufei/article/details/61924893)
 ## 配置
 ```text
 JAVA_OPTS="-server -Xms512m -Xmx512m -Xmn200m -XX:PermSize=100m -XX:MaxPermSize=128m -Xss512k -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintHeapAtGC -Xloggc:../logs/gc.log"
+```
+## 输出详细日志配置：
+```text
+-XX:+PrintGCDetails
+-XX:+PrintGCDateStamps
+-XX:+PrintGCTimeStamps
 ```
 > 监控结果：
 ```text
